--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="grid-3" style="margin-top:12px">
-          <img src="images/gallery_equestrian.jpg" alt="Megu Donni in an equestrian outfit holding a riding helmet">
-          <img src="images/gallery_fencing.jpg" alt="Megu Donni practicing fencing with a foil and mask">
-          <img src="images/gallery_archaeologist.gif" alt="Megu Donni as an archaeologist restoring a clay pot">
-          <img src="images/gallery_firefighter.gif" alt="Megu Donni dressed as a firefighter holding a hose">
-          <img src="images/gallery_archery.jpg" alt="Megu Donni aiming a bow and arrow in an action pose">
+          <img src="images/at_binici_small.png" alt="Megu Donni in an equestrian outfit holding a riding helmet">
+          <img src="images/gallery_fencing.png" alt="Megu Donni practicing fencing with a foil and mask">
+          <img src="images/gallery_archaeologist.png" alt="Megu Donni as an archaeologist restoring a clay pot">
+          <img src="images/gallery_firefighter.png" alt="Megu Donni dressed as a firefighter holding a hose">
+          <img src="images/gallery_archery.png" alt="Megu Donni aiming a bow and arrow in an action pose">
           <img src="images/gallery_ballet.gif" alt="Megu Donni performing a joyful ballet dance in a pink tutu">
         </div>
       </div>
