--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Megu Donni World</title>
+  <link rel="icon" href="images/logo.svg?v=2">
   <meta name="description" content="Official home of Megu Donni: art, shorts, and stories.">
-  <link rel="icon" href="images/logo.svg">
+  <title>Megu Donni World</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+
+  <body>
 
   <header class="header">
     <div class="container wrap">
