--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
   <header class="header">
     <div class="container wrap">
-      <div class="brand">Megu Donni World</div>
+      <div class="brand">
+  <img src="images/logo.svg" alt="Megu Donni logo">
+  <strong>Megu Donni World</strong>
+</div>
       <nav class="nav">
         <a href="#gallery">Gallery</a>
         <a href="#episodes">Episodes</a>
