--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       </nav>
     </div>
   </header>
+<section class="hero">
+  <div class="hero-content">
+    <h1>Welcome to Megu Donni World</h1>
+    <p>Step into the colorful universe of Megu Donni — a blue-haired dreamer who turns everyday adventures into extraordinary stories. From epic sports moments to whimsical professions, explore her world through art, animation, and pure imagination.</p>
+    <a href="#gallery" class="btn">Explore the Gallery</a>
+  </div>
+</section>
 
   <main>
     <!-- HERO -->
