--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <p>Step into the colorful universe of Megu Donni — a blue-haired dreamer who turns everyday adventures into extraordinary stories. From epic sports moments to whimsical professions, explore her world through art, animation, and pure imagination.</p>
     <a href="#gallery" class="btn">Explore the Gallery</a>
   </div>
+  <div class="hero-image">
+    <img src="images/at_binici.png" alt="Megu Donni in equestrian outfit">
+  </div>
 </section>
 
   <main>
