--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <a href="#gallery" class="btn">Explore the Gallery</a>
   </div>
   <div class="hero-image">
-    <img src="images/at_binici_small.png" alt="Megu Donni in equestrian outfit">
+    <img src="images/hero_megu.png" alt="Megu Donni in equestrian outfit">
   </div>
 </section>
 
