--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
 <section class="hero">
   <div class="hero-content">
     <h1>Welcome to Megu Donni World</h1>
-    <p>Step into the colorful universe of Megu Donni — a blue-haired dreamer who turns everyday adventures into extraordinary stories. From epic sports moments to whimsical professions, explore her world through art, animation, and pure imagination.</p>
-    <a href="#gallery" class="btn">Explore the Gallery</a>
+    <p>Official home of Megu Donni: art, shorts, and stories.</p>
   </div>
   <div class="hero-image">
-    <img src="images/hero_megu.png" alt="Megu Donni in equestrian outfit">
+    <img src="images/hero_megu.png" alt="Megu Donni smiling in casual hoodie">
   </div>
 </section>
 
-  <main>
+    <main>
     <!-- HERO -->
     <section class="container hero">
       <div>
