--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <section class="hero">
   <div class="hero-content">
     <h1>Welcome to Megu Donni World</h1>
-    <p>Official home of Megu Donni: art, shorts, and stories.</p>
+    <p>Step into the colorful world of Megu Donni, where imagination meets adventure.</p>
   </div>
   <div class="hero-image">
     <img src="images/hero_megu.png" alt="Megu Donni smiling in casual hoodie">
