--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/logo.svg?v=2">
   <meta name="description" content="Official home of Megu Donni: art, shorts, and stories.">
-  <title>Megu Donni World</title>
+  <title>Megu Donni World | Fun Art, Stories, and Creative Adventures</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
