--- a/index.html
+++ b/index.html
@@ -2,30 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Explore the vibrant world of Megu Donni — a blue-haired dreamer turning everyday adventures into extraordinary stories. Art, sports, and imagination await.">
-<meta name="keywords" content="Megu Donni, art, animation, sports, adventures, blue hair character">
-<meta name="author" content="Megu Donni World">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://megudonniworld.netlify.app/">
-<meta property="og:title" content="Megu Donni World">
-<meta property="og:description" content="Explore the vibrant world of Megu Donni — a blue-haired dreamer turning everyday adventures into extraordinary stories.">
-<meta property="og:image" content="https://megudonniworld.netlify.app/images/at_binici_small.png">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://megudonniworld.netlify.app/">
-<meta property="twitter:title" content="Megu Donni World">
-<meta property="twitter:description" content="Explore the vibrant world of Megu Donni — a blue-haired dreamer turning everyday adventures into extraordinary stories.">
-<meta property="twitter:image" content="https://megudonniworld.netlify.app/images/at_binici_small.png">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="images/logo.svg?v=2">
-  <meta name="description" content="Official home of Megu Donni: art, shorts, and stories.">
+
   <title>Megu Donni World | Fun Art, Stories, and Creative Adventures</title>
+
+  <!-- Single, stronger meta description (eski duplicate description'ı kaldırdık) -->
+  <meta name="description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
+  <meta name="keywords" content="Megu Donni, art, animation, sports, adventures, blue hair character">
+  <meta name="author" content="Megu Donni World">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/logo.svg?v=2">
+
+  <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://megudonniworld.netlify.app/">
+  <meta property="og:title" content="Megu Donni World | Fun Art, Stories, and Creative Adventures">
+  <meta property="og:description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
+  <meta property="og:image" content="https://megudonniworld.netlify.app/images/hero_megu.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://megudonniworld.netlify.app/">
+  <meta property="twitter:title" content="Megu Donni World | Fun Art, Stories, and Creative Adventures">
+  <meta property="twitter:description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
+  <meta property="twitter:image" content="https://megudonniworld.netlify.app/images/hero_megu.png">
 </head>
+
 
   <body>
 
