--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section id="contact" class="section">
       <div class="container">
         <h2>Contact</h2>
-        <p>For collaborations & licensing: <a href="mailto:hello@megudonni.example">hello@megudonni.example</a></p>
+       <p>For collaborations & licensing: <a href="mailto:megudonni@gmail.com">megudonni@gmail.com</a></p>
       </div>
     </section>
   </main>
