--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     <section id="contact" class="section">
       <div class="container">
         <h2>Contact</h2>
-       <p>For collaborations & licensing: <a href="mailto:megudonni@gmail.com">megudonni@gmail.com</a></p>
+      <p>For collaborations & licensing: <a href="mailto:megudonni@gmail.com">megudonni@gmail.com</a></p>
+<p><em>Responses within 48 hours.</em></p>
       </div>
     </section>
   </main>
