--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         <!-- <img src="images/at_binici_small.png" alt="Megu Donni hero"> -->
       </div>
     </section>
+<section id="about" class="section about">
+  <div class="container">
+    <h2>About Megu Donni</h2>
+    <p>Megu Donni is a blue-haired dreamer who transforms everyday moments into extraordinary adventures. Whether she’s exploring ancient ruins, mastering new sports, or creating art, Megu brings a sense of wonder and creativity to everything she does. Her world is a place where imagination has no limits — and everyone is welcome to join the journey.</p>
+  </div>
+</section>
 
     <!-- GALLERY (senin mevcut görsellerin) -->
     <section id="gallery" class="section">
