--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link rel="icon" href="images/logo.svg?v=2">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
