--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       method="POST"
       data-netlify="true"
       netlify-honeypot="bot-field"
-      action="/thank-you.html"
+      action="/thank-you/"
       style="max-width:520px">
   <!-- Netlify'nin formu algılaması için gerekli -->
   <input type="hidden" name="form-name" value="subscribe" />
