--- a/index.html
+++ b/index.html
@@ -117,26 +117,19 @@
       method="POST"
       data-netlify="true"
       netlify-honeypot="bot-field"
-      action="/thank-you/"
-      style="max-width:520px">
-  <!-- Netlify'nin formu algılaması için gerekli -->
-  <input type="hidden" name="form-name" value="subscribe" />
-  <!-- Bot tuzağı -->
+      action="/thank-you/">
+  <input type="hidden" name="form-name" value="subscribe">
   <p style="display:none">
-    <label>Don’t fill this out: <input name="bot-field" /></label>
+    <label>Don’t fill this out: <input name="bot-field"></label>
   </p>
-
   <div style="display:flex; gap:8px; flex-wrap:wrap">
     <input type="email" name="email" placeholder="you@example.com" required
            style="flex:1; min-width:220px; padding:12px 14px; border-radius:10px; border:1px solid #ddd">
     <button class="btn" type="submit">Subscribe</button>
   </div>
 </form>
-
   </div>
 </section>
-
-
     <section id="contact" class="section">
       <div class="container">
         <h2>Contact</h2>
