--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <meta property="twitter:title" content="Megu Donni World | Fun Art, Stories, and Creative Adventures">
   <meta property="twitter:description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
   <meta property="twitter:image" content="https://megudonniworld.netlify.app/images/hero_megu.png">
+  <!-- Plausible -->
+<script defer data-domain="megudonniworld.netlify.app" src="https://plausible.io/js/script.js"></script>
 </head>
 
 
