--- a/index.html
+++ b/index.html
@@ -149,5 +149,10 @@
   </footer>
 
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
+    <footer style="text-align:center; padding: 20px; font-size: 14px; color: #666;">
+  <a href="/privacy.html">Privacy Policy</a> |
+  <a href="/terms.html">Terms & Conditions</a>
+</footer>
+
 </body>
 </html>
