--- a/privacy.html
+++ b/privacy.html
@@ -30,7 +30,8 @@
   <h2>Changes to This Policy</h2>
   <p>We may update this Privacy Policy from time to time. We will notify you by posting the new version on this page.</p>
 
-  <h2>Contact Us</h2>
-  <p>If you have questions about this Privacy Policy, please contact us at: contact@megudonni.com</p>
+ <h2>Contact Us</h2>
+<p>If you have questions about this Privacy Policy, please contact us at: megudonni@gmail.com</p>
+
 </body>
 </html>
