--- a/terms.html
+++ b/terms.html
@@ -28,6 +28,7 @@
   <p>We reserve the right to update these terms at any time. Continued use of the site after changes are posted constitutes acceptance of the new terms.</p>
 
   <h2>Contact Us</h2>
-  <p>If you have any questions about these Terms & Conditions, please contact us at: contact@megudonni.com</p>
+<p>If you have any questions about these Terms & Conditions, please contact us at: megudonni@gmail.com</p>
+
 </body>
 </html>
