--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
   <meta property="og:description" content="Discover Megu Donni World, a colorful space filled with fun art, creative stories, and inspiring adventures for all ages.">
   <meta property="og:image" content="https://megudonniworld.netlify.app/images/hero_megu.png">
 
+  <!-- PWA manifest -->
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#111111">
+
+<!-- iOS için -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+
+
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://megudonniworld.netlify.app/">
