--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
 
+  <style>
+.product-card{border:1px solid #eee;border-radius:12px;padding:16px;text-align:center;background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.05);max-width:240px;margin:10px;display:inline-block;vertical-align:top}
+.product-card img{max-width:100%;border-radius:8px}
+.product-card h3{font-size:16px;margin:10px 0 5px}
+.product-card p{font-size:14px;color:#666}
+.buy-btn{display:inline-block;margin-top:8px;padding:8px 12px;background:#ff4b4b;color:#fff;border-radius:6px;text-decoration:none;font-size:14px}
+.buy-btn:hover{background:#e63c3c}
+</style>
+
+
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://megudonniworld.netlify.app/">
