--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
       </div>
     </section>
 
+      <div class="product-card">
+  <a href="https://www.redbubble.com/i/mug/Megu-Donni-Practices-Underwater-Yoga-by-Aydemir71/172556501.9Q0AD" target="_blank" rel="noopener">
+    <img src="https://ih1.redbubble.net/image.5891585898.6501/ur%2Cmug_lifestyle%2Ctall_portrait%2C750x1000.u7.jpg" alt="Megu Donni Practices Underwater Yoga – Mug">
+  </a>
+  <h3>Megu Donni Practices Underwater Yoga (Mug)</h3>
+  <p>Dishwasher & microwave safe ceramic mug.</p>
+  <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Practices-Underwater-Yoga-by-Aydemir71/172556501.9Q0AD" target="_blank" rel="noopener">Satın Al</a>
+</div>
+
+
     <!-- Placeholder bölümler: sonra dolduracağız -->
     <section id="episodes" class="section">
       <div class="container">
