--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </a>
   <h3>Megu Donni Practices Underwater Yoga (Mug)</h3>
   <p>Dishwasher & microwave safe ceramic mug.</p>
-  <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Practices-Underwater-Yoga-by-Aydemir71/172556501.9Q0AD" target="_blank" rel="noopener">Satın Al</a>
+  <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Practices-Underwater-Yoga-by-Aydemir71/172556501.9Q0AD" target="_blank" rel="noopener">Buy Now</a>
 </div>
 
 
