--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
   </div>
 </section>
 
+      <nav>
+  <a href="/">Home</a>
+  <a href="/store.html">Store</a>
+  <a href="/contact">Contact</a>
+</nav>
+
+
     <!-- GALLERY (senin mevcut görsellerin) -->
     <section id="gallery" class="section">
       <div class="container">
