--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
   <strong>Megu Donni World</strong>
 </div>
       <nav class="nav">
-        <a href="#gallery">Gallery</a>
-        <a href="#episodes">Episodes</a>
-        <a href="#subscribe">Subscribe</a>
-        <a href="#contact">Contact</a>
-      </nav>
+  <a href="#gallery">Gallery</a>
+  <a href="#episodes">Episodes</a>
+  <a href="#subscribe">Subscribe</a>
+  <a href="#contact">Contact</a>
+  <a href="/store.html">Store</a>  <!-- EKLENDİ -->
+</nav>
+
     </div>
   </header>
 <section class="hero">
@@ -136,6 +138,9 @@
   <p>Dishwasher & microwave safe ceramic mug.</p>
   <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Practices-Underwater-Yoga-by-Aydemir71/172556501.9Q0AD" target="_blank" rel="noopener">Buy Now</a>
 </div>
+        </div> <!-- gallery kapanış -->
+
+        
       
  
  
