--- a/store.html
+++ b/store.html
@@ -4,36 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Megu Donni Store</title>
-  <link rel="stylesheet" href="styles.css"> <!-- varsa ana CSS -->
+  <link rel="stylesheet" href="styles.css">
   <style>
-    body {font-family: system-ui, sans-serif; margin:0; padding:0;}
-    h1 {text-align:center; margin: 20px 0;}
-    .store-container {display: flex; flex-wrap: wrap; justify-content: center;}
+    body {font-family: system-ui, sans-serif; margin:0}
+    h1 {text-align:center; margin: 24px 0}
+    .store-container {display:flex; flex-wrap:wrap; justify-content:center}
     .product-card{border:1px solid #eee;border-radius:12px;padding:16px;text-align:center;background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.05);max-width:240px;margin:10px}
     .product-card img{max-width:100%;border-radius:8px}
-    .product-card h3{font-size:16px;margin:10px 0 5px}
-    .product-card p{font-size:14px;color:#666}
     .buy-btn{display:inline-block;margin-top:8px;padding:8px 12px;background:#ff4b4b;color:#fff;border-radius:6px;text-decoration:none;font-size:14px}
     .buy-btn:hover{background:#e63c3c}
   </style>
 </head>
 <body>
-
-<h1>Megu Donni Official Store</h1>
-
-<div class="store-container">
-  <!-- Buraya ürün kartları gelecek -->
-  <div class="product-card">
-    <a href="https://www.redbubble.com/i/mug/Megu-Donni-Practices-Underwater-Yoga-by-Aydemir71/172556501.9Q0AD" target="_blank" rel="noopener">
-      <img src="/images/products/underwater-yoga-mug.jpg" alt="Megu Donni Practices Underwater Yoga – Mug">
-    </a>
-    <h3>Megu Donni Practices Underwater Yoga (Mug)</h3>
-    <p>Dishwasher & microwave-safe ceramic mug.</p>
-    <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Practices-Underwater-Yoga-by-Aydemir71/172556501.9Q0AD" target="_blank" rel="noopener">Buy Now</a>
+  <h1>Megu Donni Official Store</h1>
+  <div class="store-container">
+    <!-- ÜRÜN KARTLARINI BURAYA KOYACAĞIZ -->
   </div>
-  
-  <!-- Diğer ürünler buraya -->
-</div>
-
 </body>
 </html>
