--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
       method="POST"
       data-netlify="true"
       netlify-honeypot="bot-field"
-      action="/thanks"
+      action="/thanks.html"
+
   <input type="hidden" name="form-name" value="subscribe">
   <p style="display:none">
     <label>Don’t fill this out: <input name="bot-field"></label>
