--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
       method="POST"
       data-netlify="true"
       netlify-honeypot="bot-field"
-      action="/thanks.html"
+      action="/thanks/"
+
 
   <input type="hidden" name="form-name" value="subscribe">
   <p style="display:none">
