--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       method="POST"
       data-netlify="true"
       netlify-honeypot="bot-field"
-      action="/thanks/"
+      action="/thanks/">
 
 
   <input type="hidden" name="form-name" value="subscribe">
