--- a/thanks/index.html
+++ b/thanks/index.html
@@ -6,27 +6,46 @@
   <title>Thanks!</title>
   <style>
     body {
-      font-family: system-ui, Segoe UI, Roboto, Arial, sans-serif;
-      margin: 40px;
-      line-height: 1.6;
-      max-width: 720px;
+      font-family: 'Quicksand', Segoe UI, Roboto, Arial, sans-serif;
+      margin: 0;
+      padding: 40px 20px;
+      background: #f9fafc;
       color: #333;
+      text-align: center;
     }
     h1 {
       color: #1a73e8;
+      font-size: 2em;
+      margin-bottom: 12px;
     }
-    a {
-      color: #1a73e8;
+    p {
+      max-width: 600px;
+      margin: 0 auto 20px;
+      line-height: 1.6;
+    }
+    img {
+      max-width: 200px;
+      border-radius: 12px;
+      margin-bottom: 20px;
+    }
+    a.button {
+      display: inline-block;
+      background: #1a73e8;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
       text-decoration: none;
+      font-weight: 500;
     }
-    a:hover {
-      text-decoration: underline;
+    a.button:hover {
+      background: #155cb0;
     }
   </style>
 </head>
 <body>
+  <img src="/images/hero_megu.png" alt="Megu Donni smiling" />
   <h1>Thanks for subscribing!</h1>
-  <p>You’re now on the list. We’ll email you when new art drops, episodes launch, and special updates arrive.</p>
-  <p><a href="/">← Back to Home</a></p>
+  <p>You’re now part of Megu Donni’s world. We’ll email you when new art drops, episodes launch, and special updates arrive!</p>
+  <a href="/" class="button">Return to Megu’s World</a>
 </body>
 </html>
