--- a/store.html
+++ b/store.html
@@ -6,19 +6,71 @@
   <title>Megu Donni Store</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    body {font-family: system-ui, sans-serif; margin:0}
-    h1 {text-align:center; margin: 24px 0}
-    .store-container {display:flex; flex-wrap:wrap; justify-content:center}
+    body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;margin:0;background:#fafafa}
+    h1{text-align:center;margin:24px 0}
+    .store-container{display:flex;flex-wrap:wrap;justify-content:center}
     .product-card{border:1px solid #eee;border-radius:12px;padding:16px;text-align:center;background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.05);max-width:240px;margin:10px}
     .product-card img{max-width:100%;border-radius:8px}
+    .product-card h3{font-size:16px;margin:10px 0 5px}
+    .product-card p{font-size:14px;color:#666}
     .buy-btn{display:inline-block;margin-top:8px;padding:8px 12px;background:#ff4b4b;color:#fff;border-radius:6px;text-decoration:none;font-size:14px}
     .buy-btn:hover{background:#e63c3c}
   </style>
 </head>
 <body>
   <h1>Megu Donni Official Store</h1>
+
   <div class="store-container">
-    <!-- ÜRÜN KARTLARINI BURAYA KOYACAĞIZ -->
+    <!-- 1 -->
+    <div class="product-card">
+      <a href="https://www.redbubble.com/i/mug/Follow-Your-Dreams-Megalodon-Style-by-Aydemir71/172638367.W3OIY" target="_blank" rel="noopener">
+        <img src="/images/products/follow-your-dreams-mug.jpg" alt="Follow Your Dreams. Megalodon Style (Mug)">
+      </a>
+      <h3>Follow Your Dreams. Megalodon Style (Mug)</h3>
+      <p>Dishwasher & microwave-safe ceramic mug.</p>
+      <a class="buy-btn" href="https://www.redbubble.com/i/mug/Follow-Your-Dreams-Megalodon-Style-by-Aydemir71/172638367.W3OIY" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+
+    <!-- 2 -->
+    <div class="product-card">
+      <a href="https://www.redbubble.com/i/mug/Eat-Cake-Like-a-Shark-by-Aydemir71/172617200.9Q0AD" target="_blank" rel="noopener">
+        <img src="/images/products/eat-cake-like-a-shark-mug.jpg" alt="Eat Cake Like a Shark (Mug)">
+      </a>
+      <h3>Eat Cake Like a Shark (Mug)</h3>
+      <p>Dishwasher & microwave-safe ceramic mug.</p>
+      <a class="buy-btn" href="https://www.redbubble.com/i/mug/Eat-Cake-Like-a-Shark-by-Aydemir71/172617200.9Q0AD" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+
+    <!-- 3 -->
+    <div class="product-card">
+      <a href="https://www.redbubble.com/i/mug/Megu-Donni-Awkward-Entrance-Comic-by-Aydemir71/172610725.9Q0AD" target="_blank" rel="noopener">
+        <img src="/images/products/awkward-entrance-mug.jpg" alt="Megu Donni Awkward Entrance Comic (Mug)">
+      </a>
+      <h3>Megu Donni Awkward Entrance Comic (Mug)</h3>
+      <p>Dishwasher & microwave-safe ceramic mug.</p>
+      <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Awkward-Entrance-Comic-by-Aydemir71/172610725.9Q0AD" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+
+    <!-- 4 -->
+    <div class="product-card">
+      <a href="https://www.redbubble.com/i/mug/Megu-Donni-Mom-App-Not-Found-Comic-by-Aydemir71/172610590.9Q0AD" target="_blank" rel="noopener">
+        <img src="/images/products/mom-app-not-found-mug.jpg" alt="Megu Donni Mom App Not Found Comic (Mug)">
+      </a>
+      <h3>Mom App Not Found (Mug)</h3>
+      <p>Dishwasher & microwave-safe ceramic mug.</p>
+      <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Mom-App-Not-Found-Comic-by-Aydemir71/172610590.9Q0AD" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+
+    <!-- 5 -->
+    <div class="product-card">
+      <a href="https://www.redbubble.com/i/mug/Megu-Donni-Stand-Out-Shark-Comic-by-Aydemir71/172610515.9Q0AD" target="_blank" rel="noopener">
+        <img src="/images/products/stand-out-shark-mug.jpg" alt="Megu Donni Stand Out Shark Comic (Mug)">
+      </a>
+      <h3>Stand Out Shark (Mug)</h3>
+      <p>Dishwasher & microwave-safe ceramic mug.</p>
+      <a class="buy-btn" href="https://www.redbubble.com/i/mug/Megu-Donni-Stand-Out-Shark-Comic-by-Aydemir71/172610515.9Q0AD" target="_blank" rel="noopener">Buy Now</a>
+    </div>
   </div>
 </body>
 </html>
+
