--- a/store.html
+++ b/store.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Megu Donni Store</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <style>
-    body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;margin:0;background:#fafafa}
-    h1{text-align:center;margin:24px 0}
-    .collections{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,1fr));gap:16px;max-width:1100px;margin:0 auto 40px;padding:0 16px}
-    .card{background:#fff;border:1px solid #eee;border-radius:14px;box-shadow:0 2px 6px rgba(0,0,0,.05);overflow:hidden;display:flex;flex-direction:column}
-    .card img{width:100%;height:180px;object-fit:cover}
-    .card .content{padding:14px}
-    .card h3{font-size:18px;margin:6px 0 8px}
-    .card p{font-size:14px;color:#666;margin:0 0 12px}
-    .btn{display:inline-block;padding:8px 12px;background:#ff4b4b;color:#fff;border-radius:8px;text-decoration:none;font-size:14px}
+    body{font-family:system-ui, Segoe UI, Roboto, Arial, sans-serif; margin:0; background:#fafafa}
+    h1{text-align:center; margin:24px 0}
+    .collections{display:grid; grid-template-columns:repeat(auto-fill,minmax(240px,1fr)); gap:16px; max-width:1100px; margin:0 auto 40px; padding:0 16px}
+    .card{background:#fff; border:1px solid #eee; border-radius:14px; box-shadow:0 2px 6px rgba(0,0,0,.05); overflow:hidden; display:flex; flex-direction:column}
+    .card img{width:100%; height:180px; object-fit:cover; background:#f0f0f3}
+    .content{padding:14px}
+    .content h3{font-size:18px; margin:6px 0 8px}
+    .content p{font-size:14px; color:#666; margin:0 0 12px}
+    .btn{display:inline-block; padding:8px 12px; background:#ff4b4b; color:#fff; border-radius:8px; text-decoration:none; font-size:14px}
     .btn:hover{background:#e63c3c}
   </style>
 </head>
@@ -22,33 +22,103 @@
   <h1>Megu Donni Official Store</h1>
 
   <div class="collections">
-    <!-- Koleksiyon #1 – (senin verdiğin link) -->
+    <!-- 1 -->
     <div class="card">
-      <img src="/images/collections/underwater-yoga-collection.jpg" alt="Underwater Yoga Collection">
+      <img src="/images/collections/col-1.jpg" alt="Featured Collection 1">
       <div class="content">
-        <h3>Underwater Yoga Collection</h3>
-        <p>Megu Donni’s underwater yoga vibes—mugs, tees and more.</p>
-        <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328903&iaCode=all-departments&sortOrder=top%20selling" target="_blank" rel="noopener">View Collection</a>
+        <h3>Featured Collection #1</h3>
+        <p>Handpicked designs from the Megu Donni world.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328903&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
       </div>
     </div>
 
-    <!-- Koleksiyon #2 – Örnek (linki sen eklersin) -->
+    <!-- 2 -->
     <div class="card">
-      <img src="/images/collections/comic-series-collection.jpg" alt="Megu Donni Comic Series">
+      <img src="/images/collections/col-2.jpg" alt="Featured Collection 2">
       <div class="content">
-        <h3>Megu Donni Comic Series</h3>
-        <p>Quirky one-liners & slice-of-life shark humor.</p>
-        <a class="btn" href="RED BUBBLE KOLEKSIYON LINKI" target="_blank" rel="noopener">View Collection</a>
+        <h3>Featured Collection #2</h3>
+        <p>Best-sellers and fan favorites.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328906&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
       </div>
     </div>
 
-    <!-- Koleksiyon #3 – Örnek -->
+    <!-- 3 -->
     <div class="card">
-      <img src="/images/collections/motivational-sharks-collection.jpg" alt="Motivational Sharks">
+      <img src="/images/collections/col-3.jpg" alt="Featured Collection 3">
       <div class="content">
-        <h3>Motivational Sharks</h3>
-        <p>Bold quotes with cheerful shark energy.</p>
-        <a class="btn" href="RED BUBBLE KOLEKSIYON LINKI" target="_blank" rel="noopener">View Collection</a>
+        <h3>Featured Collection #3</h3>
+        <p>Playful visuals with a bold vibe.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328909&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
+      </div>
+    </div>
+
+    <!-- 4 -->
+    <div class="card">
+      <img src="/images/collections/col-4.jpg" alt="Featured Collection 4">
+      <div class="content">
+        <h3>Featured Collection #4</h3>
+        <p>Minimal lines, maximum charm.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328911&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
+      </div>
+    </div>
+
+    <!-- 5 -->
+    <div class="card">
+      <img src="/images/collections/col-5.jpg" alt="Featured Collection 5">
+      <div class="content">
+        <h3>Featured Collection #5</h3>
+        <p>Shark energy meets witty lines.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328912&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
+      </div>
+    </div>
+
+    <!-- 6 -->
+    <div class="card">
+      <img src="/images/collections/col-6.jpg" alt="Featured Collection 6">
+      <div class="content">
+        <h3>Featured Collection #6</h3>
+        <p>Colorful picks for daily joy.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328945&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
+      </div>
+    </div>
+
+    <!-- 7 -->
+    <div class="card">
+      <img src="/images/collections/col-7.jpg" alt="Featured Collection 7">
+      <div class="content">
+        <h3>Featured Collection #7</h3>
+        <p>Clean forms, strong silhouettes.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
+      </div>
+    </div>
+
+    <!-- 8 -->
+    <div class="card">
+      <img src="/images/collections/col-8.jpg" alt="Featured Collection 8">
+      <div class="content">
+        <h3>Featured Collection #8</h3>
+        <p>Graphic statements with a smile.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
+      </div>
+    </div>
+
+    <!-- 9 -->
+    <div class="card">
+      <img src="/images/collections/col-9.jpg" alt="Featured Collection 9">
+      <div class="content">
+        <h3>Featured Collection #9</h3>
+        <p>Bold colors, playful forms.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
+      </div>
+    </div>
+
+    <!-- 10 -->
+    <div class="card">
+      <img src="/images/collections/col-10.jpg" alt="Featured Collection 10">
+      <div class="content">
+        <h3>Featured Collection #10</h3>
+        <p>Limited picks curated for you.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
       </div>
     </div>
   </div>
