--- a/store.html
+++ b/store.html
@@ -1,126 +1,144 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Megu Donni Store</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Store | Megu Donni World</title>
+  <link rel="stylesheet" href="styles.css">
+
   <style>
-    body{font-family:system-ui, Segoe UI, Roboto, Arial, sans-serif; margin:0; background:#fafafa}
-    h1{text-align:center; margin:24px 0}
-    .collections{display:grid; grid-template-columns:repeat(auto-fill,minmax(240px,1fr)); gap:16px; max-width:1100px; margin:0 auto 40px; padding:0 16px}
-    .card{background:#fff; border:1px solid #eee; border-radius:14px; box-shadow:0 2px 6px rgba(0,0,0,.05); overflow:hidden; display:flex; flex-direction:column}
-    .card img{width:100%; height:180px; object-fit:cover; background:#f0f0f3}
-    .content{padding:14px}
-    .content h3{font-size:18px; margin:6px 0 8px}
-    .content p{font-size:14px; color:#666; margin:0 0 12px}
-    .btn{display:inline-block; padding:8px 12px; background:#ff4b4b; color:#fff; border-radius:8px; text-decoration:none; font-size:14px}
-    .btn:hover{background:#e63c3c}
+    .collection-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .collection-card {
+      border: 1px solid #eee;
+      border-radius: 12px;
+      overflow: hidden;
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      text-align: center;
+      transition: transform 0.2s ease;
+    }
+    .collection-card:hover {
+      transform: translateY(-4px);
+    }
+    .collection-card img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .collection-card h3 {
+      font-size: 18px;
+      margin: 12px 0 8px;
+    }
+    .collection-card a.btn {
+      display: inline-block;
+      margin: 10px 0 16px;
+      padding: 8px 14px;
+      background: #ff4b4b;
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    .collection-card a.btn:hover {
+      background: #e63c3c;
+    }
   </style>
 </head>
 <body>
-  <h1>Megu Donni Official Store</h1>
 
-  <div class="collections">
-    <!-- 1 -->
-    <div class="card">
-      <img src="/images/collections/col-1.jpg" alt="Featured Collection 1">
-      <div class="content">
-        <h3>Featured Collection #1</h3>
-        <p>Handpicked designs from the Megu Donni world.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328903&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+<header class="header">
+  <div class="container wrap">
+    <div class="brand">
+      <img src="images/logo.svg" alt="Megu Donni logo">
+      <strong>Megu Donni World</strong>
+    </div>
+    <nav class="nav">
+      <a href="/">Home</a>
+      <a href="/store.html" class="active">Store</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <h1>Shop Our Collections</h1>
+  <p>Browse our Redbubble collections and find your favorite Megu Donni designs.</p>
+
+  <div class="collection-grid">
+    <div class="collection-card">
+      <img src="images/collections/col-1.jpg" alt="Collection 1">
+      <h3>Underwater Yoga</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328903&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 2 -->
-    <div class="card">
-      <img src="/images/collections/col-2.jpg" alt="Featured Collection 2">
-      <div class="content">
-        <h3>Featured Collection #2</h3>
-        <p>Best-sellers and fan favorites.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328906&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-2.jpg" alt="Collection 2">
+      <h3>Follow Your Dreams</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328906&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 3 -->
-    <div class="card">
-      <img src="/images/collections/col-3.jpg" alt="Featured Collection 3">
-      <div class="content">
-        <h3>Featured Collection #3</h3>
-        <p>Playful visuals with a bold vibe.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328909&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-3.jpg" alt="Collection 3">
+      <h3>Eat Cake Like a Shark</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328909&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 4 -->
-    <div class="card">
-      <img src="/images/collections/col-4.jpg" alt="Featured Collection 4">
-      <div class="content">
-        <h3>Featured Collection #4</h3>
-        <p>Minimal lines, maximum charm.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328911&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-4.jpg" alt="Collection 4">
+      <h3>Awkward Entrance</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328911&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 5 -->
-    <div class="card">
-      <img src="/images/collections/col-5.jpg" alt="Featured Collection 5">
-      <div class="content">
-        <h3>Featured Collection #5</h3>
-        <p>Shark energy meets witty lines.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328912&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-5.jpg" alt="Collection 5">
+      <h3>Mom App Not Found</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328912&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 6 -->
-    <div class="card">
-      <img src="/images/collections/col-6.jpg" alt="Featured Collection 6">
-      <div class="content">
-        <h3>Featured Collection #6</h3>
-        <p>Colorful picks for daily joy.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328945&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-6.jpg" alt="Collection 6">
+      <h3>Stand Out Shark</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328945&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 7 -->
-    <div class="card">
-      <img src="/images/collections/col-7.jpg" alt="Featured Collection 7">
-      <div class="content">
-        <h3>Featured Collection #7</h3>
-        <p>Clean forms, strong silhouettes.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-7.jpg" alt="Collection 7">
+      <h3>Wisdom Series</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 8 -->
-    <div class="card">
-      <img src="/images/collections/col-8.jpg" alt="Featured Collection 8">
-      <div class="content">
-        <h3>Featured Collection #8</h3>
-        <p>Graphic statements with a smile.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-8.jpg" alt="Collection 8">
+      <h3>Cosmic Collection</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 9 -->
-    <div class="card">
-      <img src="/images/collections/col-9.jpg" alt="Featured Collection 9">
-      <div class="content">
-        <h3>Featured Collection #9</h3>
-        <p>Bold colors, playful forms.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-9.jpg" alt="Collection 9">
+      <h3>Megu's Sports</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
 
-    <!-- 10 -->
-    <div class="card">
-      <img src="/images/collections/col-10.jpg" alt="Featured Collection 10">
-      <div class="content">
-        <h3>Featured Collection #10</h3>
-        <p>Limited picks curated for you.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling">View Collection</a>
-      </div>
+    <div class="collection-card">
+      <img src="images/collections/col-10.jpg" alt="Collection 10">
+      <h3>Humor & Comics</h3>
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling" target="_blank" class="btn">View Collection</a>
     </div>
   </div>
+</main>
+
+<footer class="footer">
+  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+    <div>© <span id="y"></span> Megu Donni</div>
+    <div><a href="/">Home</a> · <a href="/store.html">Store</a></div>
+  </div>
+</footer>
+
+<script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
